@@ -29,18 +29,18 @@ func TestConfig(t *testing.T) {
 					"key": "1234key",
 					"certificate": "1234cert",
 				},
-        "concurrent_requests": 15,
+        "queue_size": 15,
       }`),
 			expectedConfig: Config{
-				Host:               "localhost:3000",
-				MaxUnzippedSize:    64,
-				MaxHeaderBytes:     8,
-				ReadTimeout:        3000000000,
-				WriteTimeout:       4000000000,
-				ShutdownTimeout:    9000000000,
-				SecretToken:        "1234random",
-				SSL:                &SSLConfig{Enabled: &truthy, PrivateKey: "1234key", Cert: "1234cert"},
-				ConcurrentRequests: 15,
+				Host:            "localhost:3000",
+				MaxUnzippedSize: 64,
+				MaxHeaderBytes:  8,
+				ReadTimeout:     3000000000,
+				WriteTimeout:    4000000000,
+				ShutdownTimeout: 9000000000,
+				SecretToken:     "1234random",
+				SSL:             &SSLConfig{Enabled: &truthy, PrivateKey: "1234key", Cert: "1234cert"},
+				QueueSize:       15,
 			},
 		},
 		{
@@ -52,32 +52,32 @@ func TestConfig(t *testing.T) {
         "write_timeout": 2s,
         "shutdown_timeout": 5s,
 				"secret_token": "1234random",
-        "concurrent_requests": 20,
+        "queue_size": 20,
       }`),
 			expectedConfig: Config{
-				Host:               "localhost:8200",
-				MaxUnzippedSize:    64,
-				MaxHeaderBytes:     8,
-				ReadTimeout:        3000000000,
-				WriteTimeout:       2000000000,
-				ShutdownTimeout:    5000000000,
-				SecretToken:        "1234random",
-				SSL:                nil,
-				ConcurrentRequests: 20,
+				Host:            "localhost:8200",
+				MaxUnzippedSize: 64,
+				MaxHeaderBytes:  8,
+				ReadTimeout:     3000000000,
+				WriteTimeout:    2000000000,
+				ShutdownTimeout: 5000000000,
+				SecretToken:     "1234random",
+				SSL:             nil,
+				QueueSize:       20,
 			},
 		},
 		{
 			config: []byte(`{ }`),
 			expectedConfig: Config{
-				Host:               "",
-				MaxUnzippedSize:    0,
-				MaxHeaderBytes:     0,
-				ReadTimeout:        0,
-				WriteTimeout:       0,
-				ShutdownTimeout:    0,
-				SecretToken:        "",
-				SSL:                nil,
-				ConcurrentRequests: 0,
+				Host:            "",
+				MaxUnzippedSize: 0,
+				MaxHeaderBytes:  0,
+				ReadTimeout:     0,
+				WriteTimeout:    0,
+				ShutdownTimeout: 0,
+				SecretToken:     "",
+				SSL:             nil,
+				QueueSize:       0,
 			},
 		},
 	}
